added multiple pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>First Website</title>
+        <title>First Website - Home</title>
         <link rel="stylesheet" href="master.css">
         <link rel="stylesheet" href="style.css">
         <script defer src="action.js"></script>
@@ -15,13 +15,13 @@
         <header>
             <nav>
                 <div class="nav-left">
-                    <a href="">Home</a>
+                    <a href="index.html">Home</a>
                 </div>
 
                 <div class="nav-right">
-                    <a href="">link1</a>
-                    <a href="">link2</a>
-                    <a href="">link3</a>
+                    <a href="about.html">About</a>
+                    <a href="js.html">Java Script</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </nav>
         </header>
